tweet quote in new tab

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
           id="tweet-quote" 
           class="twitter-share-button" 
           href="https://twitter.com/intent/tweet"
-          title="Tweet this quote!">
+          title="Tweet this quote!"
+          target="_blank">
             <i class="fa fa-twitter"></i>
           </a>
         </div>
